# OpenHMD

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Android.mk  CMakeLists.txt  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt
android/: .gitignore  AndroidManifest.xml  README.md
android/jni/: Android.mk  app.c
android/src/net/openhmd/example/: Example.java
cmake/: FindLibUSB.cmake  FindSDL2.cmake
examples/: Makefile.am
examples/file_dev/: set.py  test.sh
examples/imu_viewer/: CMakeLists.txt  imu_viewer.c
examples/opengl/: CMakeLists.txt  Makefile.am  gl.c  gl.h  main.c
examples/opengl-DK2/: main.c
examples/opengl-DK2/shaders/: test1.frag.glsl
examples/opengl/shaders/: test1.frag.glsl  test1.vert.glsl
examples/opengl3/: CMakeLists.txt  gl.c  gl.h  main.c  math_3d.h
examples/simple/: CMakeLists.txt  Makefile.am  simple.c
include/: openhmd-dev.h  openhmd.h
pkg-config/: openhmd.pc  openhmd.pc.cmakein  openhmd.pc.in
src/: Makefile.am  common.c  common.h  fusion.c  fusion.h  hid.h  log.h  modules.c  olist.c  omath.c  omath.h  openhmd.c  openhmdi.h  platform-posix.c  platform-win32.c  platform.h  queue.c  queue.h  shaders.c  shaders.h  utils.h
src/drv_3glasses/: xgvr.c
src/drv_android/: android.c  android.h
src/drv_deepoon/: deepoon.c  deepoon.h  packet.c
src/drv_dreamworld/: dreamworld.c  dreamworld.h  packet.c
src/drv_dummy/: dummy.c
src/drv_external/: external.c
src/drv_file/: drv_file_fmt.h  file.c  file_reader.c
src/drv_hololens/: hololens.c  hololens.h  packet.c
src/drv_htc_vive/: config.h  magic.h  packet.c  vive.c  vive.h  vive_config.h
src/drv_lgr100/: lgr100.c  lgr100.h  packet.c
src/drv_modular/: modular.c
src/drv_nolo/: nolo.c  nolo.h  packet.c
src/drv_nreal/: air.c  packet.c
src/drv_nxtvr/: nxtvr.c  nxtvr.h
src/drv_oculus_rift/: camera.c  packet.c  rift-hmd-radio.c  rift.c  rift.h
src/drv_oculus_rift_s/: rift-s-controller.c  rift-s-controller.h  rift-s-firmware.c  rift-s-firmware.h  rift-s-hmd.h  rift-s-protocol.c  rift-s-protocol.h  rift-s-radio.c  rift-s-radio.h  rift-s.c  rift-s.h
src/drv_osvr_hdk/: osvr.c  osvr.h  packet.c
src/drv_pimax/: packet.c  pimax.c  pimax.h
src/drv_psvr/: controller.c  packet.c  psmove.c  psvr.c  psvr.h
src/drv_realtiv/: README.md  relativStm32.c
src/drv_realtiv/arduino_gyro_usb/: RawHID.cpp  gyro.ino
src/drv_relativ/: relativ.c  relativStm32.c
src/drv_relativ/STM32/: RawHID.h  STM32_BluePill.ino
src/drv_relativ/STM32/MPU6050/: MPU6050_6Axis_MotionApps20.h
src/drv_relativ/STM32_BluePill/: USBAPI.h
src/drv_relativ/arduino_gyro_usb/SparkFun_MPU-9250-DMP_Arduino_Library-master/: README.md
src/drv_relativ/arduino_gyro_usb/SparkFun_MPU-9250-DMP_Arduino_Library-master/src/: SparkFunMPU9250-DMP.cpp  SparkFunMPU9250-DMP.h
src/drv_secret_hmd_one/: secret-hmd-one.c
src/drv_sparkfun_9dof/: sparkFun9DoF.c
src/drv_sparkfun_9dof/arduino_gyro_usb/: README.md  RawHID.cpp  RawHID.h  compile.sh  gyro.ino  install_libs.sh  upload.sh
src/drv_t265/: t265.c
src/drv_vrtek/: packet.c  vrtek.c  vrtek.h
src/drv_wmr/: controller.c  packet.c  usb.c  wmr.c  wmr.h
src/ext_deps/: nxjson.c
subprojects/: hidapi.wrap
tests/: Makefile.am
tests/opengl/: Makefile.am
tests/simple/: Makefile.am
tests/unittests/: Makefile.am  highlevel.c  main.c  modules.c  olist.c  quat.c  queue.c  tests.h  vec.c
