option(
	'examples',
	type: 'array',
	choices: [
		'simple',
		'opengl',
		'',
	],
	value: [
		'simple',
	],
)

option(
	'drivers',
	type: 'array',
	choices: [
		'rift',
		'rift-s',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'vrtek',
		'lgr',
		'external',
		'android',
	],
	value: [
		'rift',
		'rift-s',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'vrtek',
		'lgr',
		'external',
	],
)

option(
	'hidapi',
	type: 'combo',
	choices: [
		'auto',
		'libusb',
		'hidraw'
	],
	value: 'auto',
)

option(
	'tests',
	type: 'boolean',
	value: true,
)
