project (openglexample)
include_directories(${CMAKE_BINARY_DIR}/include ${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
link_directories(${CMAKE_BINARY_DIR})
link_libraries (openhmd m ${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
add_executable(openglexample gl.c main.c)
